@startuml

title __IMPL's Class Diagram__\n

  package  {
    package product {
      package product.impl {
        class Coke {
            - name : String
            - price : Integer
            + name()
            + price()
            + equals()
            + hashCode()
        }
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class Pepsi {
            - name : String
            - price : Integer
            + name()
            + price()
            + equals()
            + hashCode()
        }
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class ProductManagerImpl {
            {static} - productMap : Map<String, Product>
            {static} - productQuantityMap : Map<Product, Integer>
            + ProductManagerImpl()
            + getProductByCode()
            - initialize()
            + replenishStock()
            + issueStock()
            + isStockAvailable()
            + listAvailableProducts()
            - persistTransactionRef()
            - logTransactionFailed()
        }
      }
    }
  }
  

  package  {
    package product {
      package product.impl {
        class Water {
            - name : String
            - price : Integer
            + name()
            + price()
            + equals()
            + hashCode()
        }
      }
    }
  }
  

  Coke -up-|> Product
  Pepsi -up-|> Product
  ProductManagerImpl -up-|> ProductManager
  Water -up-|> Product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
